<resources>
    <string name="nc_yes">Yes</string>
    <string name="nc_no">No</string>
    <string name="nc_common_and">and</string>
    <string name="nc_common_skip">Skip</string>
    <string name="nc_common_set">Set</string>
    <string name="nc_common_dismiss">Dismiss</string>
    <string name="nc_common_error_sorry">Sorry, something went wrong!</string>
    <string name="nc_reauthorize_different_account">You logged in with a different account. Log in with the account you want to reauthorize.</string>
    <string name="nc_common_create">Create</string>
    <string name="nc_common_unknown">Unknown</string>
    <string name="nc_common_disabled">Disabled</string>
    <string name="nc_common_copy">Copy</string>
    <string name="nc_common_copy_success">Copied to clipboard</string>
    <string name="nc_common_more_options">More options</string>
    <string name="nc_common_more">More</string>
    <string name="nc_add_to_home_screen">Add to home screen</string>
    <string name="nc_shortcut_created">Shortcut created</string>
    <string name="nc_shortcut_conversation_deleted">This conversation no longer exists</string>
    <string name="nc_no_account_for_server">No account found for this server</string>
    <string name="nc_settings">Settings</string>
    <string name="add_participants">Add</string>
    <string name="nc_server_connect">Test server connection</string>
    <string name="nc_server_helper_text">The link to your %1$s web interface when you open it in the browser.</string>
    <string name="nc_server_testing_connection">Testing connection</string>
    <string name="nc_server_unsupported">Server does not have supported Talk app installed</string>
    <string name="nc_server_url">Server address https://…</string>
    <string name="nc_server_not_installed">Please finish your %1$s installation</string>
    <string name="nc_server_db_upgrade_needed">Please upgrade your %1$s database</string>
    <string name="nc_server_maintenance">Please bring your %1$s out of maintenance</string>
    <string name="nc_server_version">%1$s only works with %2$s 13 and up</string>
    <string name="nc_server_import_account_plain">Import account</string>
    <string name="nc_server_import_accounts_plain">Import accounts</string>
    <string name="nc_server_import_account">Import account from the %1$s app</string>
    <string name="nc_server_import_accounts">Import accounts from the %1$s app</string>
    <string name="nc_server_failed_to_import_account">Failed to import selected account</string>
    <string name="nc_Server_account_imported">Selected account is now imported and available</string>
    <string name="nc_get_from_provider">Do you not have a server yet?\nClick here to get one from a provider</string>
    <string name="nc_push_disabled">Push notifications disabled</string>
    <string name="nc_capabilities_failed">Failed to fetch capabilities, aborting</string>
    <string name="nc_external_server_failed">Failed to fetch signaling settings</string>
    <string name="nc_display_name_not_fetched">Display name couldn\'t be fetched, aborting</string>
    <string name="nc_nextcloud_talk_app_not_installed">%1$s not available (not installed or restricted by admin)</string>
    <string name="nc_display_name_not_stored">Could not store display name, aborting</string>
    <string name="nc_push_notification_error">Sorry something went wrong, error is %1$s</string>
    <string name="nc_push_notification_fetch_error">Sorry something went wrong, cannot fetch test push message</string>
    <string name="nc_dialog_introduce_unifiedpush_selection">You are about to select your default push service</string>
    <string name="unifiedpush">UnifiedPush</string>
    <string name="nc_search">Search</string>
    <string name="nc_search_clear">Clear search</string>
    <string name="nc_channel_only_moderators_can_post">Only moderators can post in this channel</string>
    <string name="nc_channel">Channel</string>
    <string name="nc_channel_description">Only moderators can post, everybody else can only react</string>
    <string name="nc_announcement">Announcement</string>
    <string name="nc_announcement_description">Conversation for admins to inform a fixed audience, which cannot be left.</string>
    <string name="nc_admin_only">Admin only</string>
    <string name="nc_certificate_dialog_title">Check out the certificate</string>
    <string name="nc_certificate_dialog_text">Do you trust the until now unknown SSL certificate, issued by %1$s for %2$s, valid from %3$s to %4$s?</string>
    <string name="nc_certificate_error">Your SSL setup prevented connection</string>
    <string name="nc_settings_advanced_title">Advanced</string>
    <string name="nc_settings_proxy_type_key" translatable="false">proxy_type</string>
    <string name="nc_settings_proxy_type_title">Proxy type</string>
    <string name="nc_settings_proxy_host_key" translatable="false">proxy_host</string>
    <string name="nc_settings_proxy_host_title">Proxy host</string>
    <string name="nc_settings_proxy_port_key" translatable="false">proxy_port</string>
    <string name="nc_settings_proxy_port_title">Proxy port</string>
    <string name="nc_settings_proxy_username_title">Proxy username</string>
    <string name="nc_settings_proxy_username_key" translatable="false">proxy_username</string>
    <string name="nc_settings_proxy_password_title">Proxy password</string>
    <string name="nc_settings_proxy_password_key" translatable="false">proxy_password</string>
    <string name="nc_settings_use_credentials_title">Proxy requires credentials</string>
    <string name="nc_settings_use_credentials_key" translatable="false">proxy_credentials</string>
    <string name="nc_settings_reauthorize">Reauthorize account</string>
    <string name="nc_client_cert_setup">Set up client certificate</string>
    <string name="nc_client_cert_change">Change client certificate</string>
    <string name="nc_settings_remove">Remove</string>
    <string name="nc_settings_remove_confirmation">Please confirm your intent to remove the current account.</string>
    <string name="nc_settings_remove_account">Remove account</string>
    <string name="nc_settings_server_eol_title">Unsupported server</string>
    <string name="nc_settings_server_eol">The server version is too old and not supported by this version of the Android app</string>
    <string name="nc_settings_server_almost_eol">The server version is very old and will not be supported in the next release!</string>
    <string name="nc_settings_warning">Warning</string>
    <string name="nc_settings_wrong_account">Only current account can be reauthorized</string>
    <string name="nc_settings_no_talk_installed">Talk app is not installed on the server you tried to authenticate against</string>
    <string name="nc_settings_account_updated">Your already existing account was updated, instead of adding a new one</string>
    <string name="nc_account_scheduled_for_deletion">The account is scheduled for deletion, and cannot be changed</string>
    <string name="nc_settings_notification_sounds_post_oreo">Notifications</string>
    <string name="nc_settings_call_ringtone">Calls</string>
    <string name="nc_settings_call_ringtone_key" translatable="false">call_ringtone</string>
    <string name="nc_settings_other_notifications_ringtone">Messages</string>
    <string name="nc_settings_message_ringtone_key" translatable="false">message_ringtone</string>
    <string name="nc_settings_default_ringtone" translatable="false">Librem by feandesign</string>
    <string name="nc_settings_no_ringtone">No sound</string>
    <string name="nc_settings_server_notification_app_not_installed_title">Server notifications app not installed</string>
    <string name="nc_settings_contact_admin_of">Please contact the administrator of</string>
    <string name="nc_confirm">Confirm</string>
    <string name="battery_optimization_title">Battery settings</string>
    <string name="battery_optimization_not_ignored">Battery optimization is enabled which might cause issues. You should disable battery optimization!</string>
    <string name="battery_optimization_ignored">Battery optimization is ignored, all fine</string>
    <string name="notification_permission">Notification permissions</string>
    <string name="full_screen_intent_permission_title">Show incoming call over lock screen</string>
    <string name="full_screen_intent_permission_granted">Incoming call screen over lock screen is granted, all fine</string>
    <string name="full_screen_intent_permission_not_granted">Incoming call screen over lock screen is not granted. Please grant this so incoming calls appear on the lock screen!</string>
    <string name="nc_settings_appearance">Appearance</string>
    <string name="nc_settings_theme_title">Theme</string>
    <string name="nc_settings_theme_key">theme</string>
    <string name="nc_settings_theme_battery_saver_key" translatable="false">battery_saver</string>
    <string name="nc_settings_theme_follow_system_key" translatable="false">follow_system</string>
    <string name="nc_settings_theme_light_key" translatable="false">night_no</string>
    <string name="nc_settings_theme_follow_system">Use system default</string>
    <string name="nc_settings_theme_battery_saver">Set by battery saver</string>
    <string name="nc_settings_theme_light">Light</string>
    <string name="nc_settings_theme_dark">Dark</string>
    <string name="nc_settings_privacy">Privacy</string>
    <string name="nc_settings_screen_enable_unifiedpush_title">Enable UnifiedPush</string>
    <string name="nc_settings_screen_enable_unifiedpush_desc">Receive push notifications with an external UnifiedPush service</string>
    <string name="nc_settings_screen_unifiedpush_service_title">UnifiedPush Service</string>
    <string name="nc_settings_screen_lock_title">Screen lock</string>
    <string name="nc_settings_screen_lock_desc">Lock %1$s with Android screen lock or supported biometric method</string>
    <string name="nc_settings_screen_lock_key" translatable="false">screen_lock</string>
    <string name="nc_settings_screen_lock_timeout_title">Screen lock inactivity timeout</string>
    <string name="nc_settings_screen_lock_timeout_key" translatable="false">screen_lock_timeout</string>
    <string name="nc_settings_screen_security_title">Screen security</string>
    <string name="nc_settings_screen_security_desc">Prevents screenshots in the recent list and inside the app</string>
    <string name="nc_settings_screen_security_key" translatable="false">screen_security</string>
    <string name="nc_settings_incognito_keyboard_title">Incognito keyboard</string>
    <string name="nc_settings_incognito_keyboard_desc">Instructs keyboard to disable personalized learning (without guarantees)</string>
    <string name="nc_settings_media_quality_title">Sent media quality</string>
    <string name="nc_media_quality_original">Original quality</string>
    <string name="nc_media_quality_reduced">Reduced quality</string>
    <string name="nc_settings_read_privacy_key" translatable="false">read_privacy</string>
    <string name="nc_settings_read_privacy_desc">Share my read-status and show the read-status of others</string>
    <string name="nc_settings_read_privacy_title">Read status</string>
    <string name="nc_screen_lock_timeout_sixty">60</string>
    <string name="nc_no_proxy">No proxy</string>
    <string name="nc_about">About</string>
    <string name="nc_get_source_code">Get source code</string>
    <string name="nc_license_title">License</string>
    <string name="nc_license_summary">GNU General Public License, Version 3</string>
    <string name="nc_password">Password</string>
    <string name="nc_settings_phone_book_integration_desc">Match contacts based on phone number to integrate Talk shortcut into system contacts app</string>
    <string name="nc_settings_phone_book_integration_title">Phone number integration</string>
    <string name="avatar">Avatar</string>
</resources>