<?xml version="1.0" encoding="utf-8"?><!--
  ~ Nextcloud Talk application
  ~
  ~ @author Mario Danic
  ~ @author Andy Scherzinger
  ~ @author Tim Krüger
  ~ Copyright (C) 2021 Tim Krüger <t@timkrueger.me>
  ~ Copyright (C) 2021 Andy Scherzinger <info@andy-scherzinger.de>
  ~ Copyright (C) 2017 Mario Danic
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<com.yarolegovich.mp.MaterialPreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apc="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@color/white"
    android:id="@+id/settings_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/settings_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/appbar"
            android:theme="?attr/actionBarPopupTheme"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIconTint="@color/fontAppbar"
            app:popupTheme="@style/appActionBarPopupMenu"
            app:titleTextColor="@color/fontAppbar"
            tools:title="@string/nc_app_product_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.yarolegovich.mp.MaterialPreferenceCategory
        android:id="@+id/message_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        apc:cardBackgroundColor="@color/bg_default"
        apc:cardElevation="0dp">

        <TextView
            android:id="@+id/message_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="This is a test message"
            android:gravity="center" />
    </com.yarolegovich.mp.MaterialPreferenceCategory>

    <com.yarolegovich.mp.MaterialPreferenceCategory
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        apc:cardBackgroundColor="@color/bg_default"
        apc:cardElevation="0dp">

        <RelativeLayout
            android:id="@+id/avatarContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.emoji2.widget.EmojiTextView
                android:id="@+id/display_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/avatar_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_between_elements"
                tools:text="Jane Doe" />

            <TextView
                android:id="@+id/base_url_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/display_name_text"
                android:layout_centerHorizontal="true"
                android:layout_margin="4dp"
                android:textColor="@color/medium_emphasis_text"
                tools:text="nextcloud.com" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/server_age_warning_text_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/base_url_text"
                android:layout_margin="@dimen/standard_margin"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:strokeWidth="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/standard_padding">

                    <ImageView
                        android:id="@+id/server_age_warning_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_warning_white"
                        android:layout_centerVertical="true"
                        app:tint="@color/nc_darkRed"
                        android:contentDescription="@string/nc_settings_warning" />

                    <TextView
                        android:id="@+id/server_age_warning_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_toEndOf="@id/server_age_warning_icon"
                        android:paddingStart="@dimen/standard_padding"
                        android:paddingEnd="0dp"
                        android:textAlignment="viewStart"
                        android:textColor="@color/nc_darkRed"
                        tools:text="@string/nc_settings_server_almost_eol" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <ImageView
                android:id="@+id/avatar_image"
                android:layout_width="@dimen/avatar_size_big"
                android:layout_height="@dimen/avatar_size_big"
                android:layout_centerHorizontal="true"
                android:src="@drawable/account_circle_96dp"
                android:transitionName="userAvatar.transitionTag"
                android:contentDescription="@string/avatar" />

            <com.yarolegovich.mp.MaterialStandardPreference
                android:id="@+id/settings_remove_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/server_age_warning_text_card"
                apc:mp_title="@string/nc_settings_remove_account" />

        </RelativeLayout>

    </com.yarolegovich.mp.MaterialPreferenceCategory>

    <com.yarolegovich.mp.MaterialPreferenceCategory
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_appearance_category"
        android:animateLayoutChanges="true"
        apc:cardBackgroundColor="@color/bg_default"
        apc:cardElevation="0dp"
        apc:mpc_title="@string/nc_settings_appearance">

        <com.yarolegovich.mp.MaterialChoicePreference
            android:id="@+id/settings_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_default_value="@string/nc_default_theme"
            apc:mp_entry_descriptions="@array/theme_descriptions"
            apc:mp_entry_values="@array/theme_entry_values"
            apc:mp_key="@string/nc_settings_theme_key"
            apc:mp_show_value="onBottom"
            apc:mp_title="@string/nc_settings_theme_title" />

    </com.yarolegovich.mp.MaterialPreferenceCategory>

    <com.yarolegovich.mp.MaterialPreferenceCategory
        android:id="@+id/settings_notifications_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        apc:cardBackgroundColor="@color/bg_default"
        apc:cardElevation="0dp"
        apc:mpc_title="@string/nc_settings_notification_sounds">

        <com.yarolegovich.mp.MaterialStandardPreference
            android:id="@+id/settings_call_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_key="@string/nc_settings_call_ringtone_key"
            apc:mp_title="@string/nc_settings_call_ringtone" />

        <com.yarolegovich.mp.MaterialStandardPreference
            android:id="@+id/settings_message_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_key="@string/nc_settings_message_ringtone_key"
            apc:mp_title="@string/nc_settings_other_notifications_ringtone" />

    </com.yarolegovich.mp.MaterialPreferenceCategory>

    <com.yarolegovich.mp.MaterialPreferenceCategory
        android:id="@+id/settings_privacy_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        apc:cardBackgroundColor="@color/bg_default"
        apc:cardElevation="0dp"
        apc:mpc_title="@string/nc_settings_privacy">

        <com.yarolegovich.mp.MaterialSwitchPreference
            android:id="@+id/settings_screen_lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_default_value="@bool/value_false"
            apc:mp_key="@string/nc_settings_screen_lock_key"
            apc:mp_title="@string/nc_settings_screen_lock_title" />

        <com.yarolegovich.mp.MaterialChoicePreference
            android:id="@+id/settings_screen_lock_timeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_default_value="@string/nc_screen_lock_timeout_sixty"
            apc:mp_entry_descriptions="@array/screen_lock_timeout_descriptions"
            apc:mp_entry_values="@array/screen_lock_timeout_entry_values"
            apc:mp_key="@string/nc_settings_screen_lock_timeout_key"
            apc:mp_show_value="onBottom"
            apc:mp_title="@string/nc_settings_screen_lock_timeout_title" />

        <com.yarolegovich.mp.MaterialSwitchPreference
            android:id="@+id/settings_screen_security"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_default_value="@bool/value_false"
            apc:mp_key="@string/nc_settings_screen_security_key"
            apc:mp_summary="@string/nc_settings_screen_security_desc"
            apc:mp_title="@string/nc_settings_screen_security_title" />

        <com.yarolegovich.mp.MaterialSwitchPreference
            android:id="@+id/settings_incognito_keyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_default_value="@bool/value_true"
            apc:mp_key="@string/nc_settings_incognito_keyboard_key"
            apc:mp_summary="@string/nc_settings_incognito_keyboard_desc"
            apc:mp_title="@string/nc_settings_incognito_keyboard_title" />

        <com.yarolegovich.mp.MaterialSwitchPreference
            android:id="@+id/settings_phone_book_integration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_default_value="@bool/value_false"
            apc:mp_key="@string/nc_settings_phone_book_integration_key"
            apc:mp_summary="@string/nc_settings_phone_book_integration_desc"
            apc:mp_title="@string/nc_settings_phone_book_integration_title" />

        <com.yarolegovich.mp.MaterialSwitchPreference
            android:id="@+id/settings_read_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_key="@string/nc_settings_read_privacy_key"
            apc:mp_summary="@string/nc_settings_read_privacy_desc"
            apc:mp_title="@string/nc_settings_read_privacy_title" />
    </com.yarolegovich.mp.MaterialPreferenceCategory>

    <com.yarolegovich.mp.MaterialPreferenceCategory
        android:id="@+id/settings_advanced_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        apc:cardBackgroundColor="@color/bg_default"
        apc:cardElevation="0dp"
        apc:mpc_title="@string/nc_settings_advanced_title">

        <com.yarolegovich.mp.MaterialStandardPreference
            android:id="@+id/settings_client_cert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_title="@string/nc_client_cert_setup" />

        <com.yarolegovich.mp.MaterialChoicePreference
            android:id="@+id/settings_proxy_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_default_value="@string/nc_no_proxy"
            apc:mp_entry_descriptions="@array/proxy_type_descriptions"
            apc:mp_key="@string/nc_settings_proxy_type_key"
            apc:mp_show_value="onBottom"
            apc:mp_title="@string/nc_settings_proxy_type_title" />

        <com.yarolegovich.mp.MaterialEditTextPreference
            android:id="@+id/settings_proxy_host_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_key="@string/nc_settings_proxy_host_key"
            apc:mp_show_value="onBottom"
            apc:mp_title="@string/nc_settings_proxy_host_title" />

        <com.yarolegovich.mp.MaterialEditTextPreference
            android:id="@+id/settings_proxy_port_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_key="@string/nc_settings_proxy_port_key"
            apc:mp_show_value="onBottom"
            apc:mp_title="@string/nc_settings_proxy_port_title" />

        <com.yarolegovich.mp.MaterialEditTextPreference
            android:id="@+id/settings_proxy_username_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_key="@string/nc_settings_proxy_username_key"
            apc:mp_show_value="onBottom"
            apc:mp_title="@string/nc_settings_proxy_username_title" />

        <com.yarolegovich.mp.MaterialEditTextPreference
            android:id="@+id/settings_proxy_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_key="@string/nc_settings_proxy_password_key"
            apc:mp_show_value="onBottom"
            apc:mp_title="@string/nc_settings_proxy_password_title" />

        <com.yarolegovich.mp.MaterialSwitchPreference
            android:id="@+id/settings_proxy_use_credentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_default_value="false"
            apc:mp_key="@string/nc_settings_use_credentials_key"
            apc:mp_show_value="onBottom"
            apc:mp_title="@string/nc_settings_use_credentials_title">

        </com.yarolegovich.mp.MaterialSwitchPreference>
    </com.yarolegovich.mp.MaterialPreferenceCategory>

    <com.yarolegovich.mp.MaterialPreferenceCategory
        android:id="@+id/settings_about_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        apc:cardBackgroundColor="@color/bg_default"
        apc:cardElevation="0dp"
        apc:mpc_title="@string/nc_about">

        <com.yarolegovich.mp.MaterialStandardPreference
            android:id="@+id/settings_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_title="@string/nc_privacy" />

        <com.yarolegovich.mp.MaterialStandardPreference
            android:id="@+id/settings_source_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_title="@string/nc_get_source_code" />

        <com.yarolegovich.mp.MaterialStandardPreference
            android:id="@+id/settings_licence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_summary="@string/nc_license_summary"
            apc:mp_title="@string/nc_license_title" />

        <com.yarolegovich.mp.MaterialStandardPreference
            android:id="@+id/settings_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_summary="v0.1"
            apc:mp_title="@string/nc_app_product_name" />

    </com.yarolegovich.mp.MaterialPreferenceCategory>

</com.yarolegovich.mp.MaterialPreferenceScreen>
